# brewblox-firmware

./: .clang-format  .cquery  .gitignore  .gitmodules  .travis.yml  azure-pipelines.yml  readme.md  wrapped_make.sh
app/brewblox/: AppTicks.h  BrewBlox.cpp  BrewBlox.h  OneWireScanningFactory.h  build.mk  connectivity.cpp  connectivity.h  main.cpp  memory_info.cpp  memory_info.h  reset.h
app/brewblox-esp/: CMakeLists.txt  Kconfig  Makefile  brewblox-esp.code-workspace  build.sh  components_idf  docker-compose.yml  flash.sh  partitions.csv  sdkconfig  sdkconfig.old
app/brewblox-esp/main/: App.cpp  App.h  AppTicks.cpp  AppTicks.h  BrewBlox.cpp  CMakeLists.txt  Ethernet.cpp  Ethernet.h  ExpansionGpio.cpp  ExpansionGpio.hpp  Kconfig.projbuild  NetworkInterface.cpp  NetworkInterface.h  RecurringTask.hpp  SDCard.hpp  SortedContainer.hpp  StreamingClient.h  StreamingProtocol.h  TcpAsio.hpp  TimerInterrupts.cpp  Wifi.cpp  Wifi.h  bar.hpp  brewblox_esp.cpp  brewblox_esp.hpp  circular_buffer.hpp  ethernet-icon.c  ethernet_example_main.cpp  graphics.hpp  http.hpp  main.cpp  server.hpp  session.hpp  test.html  widgets.hpp
app/brewblox-esp/main/graphics/: bar.hpp  graphics.hpp
app/brewblox-esp/main/graphics/fonts/: main_font_18.cpp  main_font_22.cpp  main_font_46.cpp
app/brewblox-esp/main/httpserver/: main.cpp  request_handler.cpp  request_handler.hpp  server.cpp  server.hpp  uri_handler.hpp
app/brewblox-esp/main/network/: BufferedConnection.hpp  CboxConnection.cpp  CboxConnection.hpp  CboxConnectionSource.hpp  CboxServer.hpp  CboxStdioConnection.cpp  CboxStdioConnection.hpp  CboxTcpConnection.cpp  CboxTcpConnection.hpp  CircularBuffer.hpp  CircularBufferView.hpp  Ethernet.cpp  Ethernet.h  Ethernet.hpp  NetworkInterface.cpp  Server.hpp  Session.hpp  Wifi.cpp  Wifi.h  Wifi.hpp  circular_buffer_view.hpp  copy_min_to_buffer.h  network.cpp  session.hpp  wifi_creds.h
app/brewblox-particle/: AppTicks.h  BrewBlox.cpp  OneWireScanningFactory.h  brewblox_particle.cpp  brewblox_particle.hpp  build.mk  connectivity.cpp  main.cpp  reset.h
app/brewblox-simulator/: CMakeLists.txt
app/brewblox-simulator/main/: RecurringTask.hpp  lv_conf.h  main.cpp
app/brewblox-simulator/main/graphics/: graphics.hpp  widgets.hpp
app/brewblox-simulator/main/graphics/fonts/: main_font_12.cpp  main_font_26.cpp  main_font_28.cpp  main_font_42.cpp
app/brewblox-simulator/main/httpserver/: request_handler.cpp
app/brewblox-simulator/main/network/: CboxConnection.cpp  CboxConnection.hpp  CboxConnectionManager.cpp  CboxConnectionManager.hpp  CboxConnectionSource.hpp  CboxServer.hpp  NetworkInterface.hpp  Watchdog.hpp  network.hpp  wifi_creds.h
app/minimal/: application.cpp
app/wifi-test/: application.cpp
blox/: ActuatorOffsetBlock.cpp  ActuatorPwmBlock.h  BalancerBlock.h  DS2408Block.h  MotorValveBlock.cpp  MutexBlock.cpp  SetpointSensorPairBlock.h  stringify.h
blox/particle/: Spark3PinsBlock.cpp  Spark3PinsBlock.h  SparkIoBase.cpp
brewblox/: OneWireScanningFactory.h  brewblox.cpp  brewblox.hpp  nanopb_callbacks.cpp
brewblox/blox/: ActuatorAnalogMockBlock.cpp  ActuatorLogicBlock.cpp  ActuatorLogicBlock.h  ActuatorOffsetBlock.h  ActuatorPwmBlock.cpp  ActuatorPwmBlock.h  Block.h  DS2408Block.cpp  DS2408Block.h  DS2413Block.h  DisplaySettingsBlock.h  PidBlock.cpp  PidBlock.h  SetpointSensorPairBlock.cpp  SetpointSensorPairBlock.h  SysInfoBlock.cpp  SysInfoBlock.h  TempSensorMockBlock.h  TempSensorOneWireBlock.h
controlbox/: makefile  run-tests-with-coverage.sh
controlbox/test/: Box_test.cpp  CboxPtr_test.cpp  Connections_test.cpp  EepromObjectStorage_test.cpp  FileObjectStorage_test.cpp  LongIntScanningFactory.h  ObjectContainer_test.cpp  ObjectFactory_test.cpp  TestHelpers.cpp  TestHelpers.h  TestMatchers.hpp  TestObjects.cpp  TestObjects.h  runner.cpp
docker/: build-arm32.sh  build-arm64.sh  build-bin-arm.sh  build-bin.sh  build-compiler-arm.sh  build-compiler.sh  build-flasher.sh  build-particle.sh  build-simulator-arm.sh  build-simulator.sh  copy-bin.sh  docker-compose.yml  enable-experimental.sh  prepare-buildx.sh  push-local.sh  push-rpi-local.sh  start-compiler.sh
docker/compiler/: Dockerfile
docker/compiler-arm/: Dockerfile
docker/firmware-bin/: Dockerfile  before_build.sh  build.sh
docker/firmware-compiler/: Dockerfile  build.sh
docker/firmware-particle/: Dockerfile  build.sh  particle
docker/firmware-simulator/: .gitignore  Dockerfile  pick-binary.sh
docker/flasher/: .gitignore  Dockerfile  flash  flash-bootloader  serial-switcher.py  wifi
docker/particle/: Dockerfile
docker/rpi-flasher/: Dockerfile  bootloader  flash  flash-bootloader  serial-switcher.py
docker/rpi-particle/: Dockerfile
docker/simulator/: Dockerfile
docker/simulator-arm/: Dockerfile
docker/simulator-compiler/: Dockerfile  build.sh
docs/: .gitignore
lib/cnltest/: cnl_test.cpp  makefile  profile-tests.sh  run-tests.sh
lib/inc/: ADS124S08.h  ADS124S08.hpp  ActuatorAnalogConstrained.h  ActuatorAnalogMock.h  ActuatorDigital.h  ActuatorDigitalBase.h  ActuatorDigitalChangeLogged.h  ActuatorDigitalConstrained.h  ActuatorLogic.h  ActuatorOffset.h  ActuatorOneWire.h  ActuatorPwm.h  Balancer.h  ChemSense.hpp  DS18B20.h  DS18B20Mock.h  DS18B20mock.h  DS2408.h  DS2408Mock.h  DS2408mock.h  DS2413.h  DS2413Mock.h  DS2413mock.h  DS248x.h  DS248x.hpp  DallasTemperature.h  FilterChain.h  FixedPoint.h  FpFilterChain.h  I2CDevice.hpp  IirFilter.h  IntervalHelper.h  IoArray.h  IoPins.h  Logger.h  MockIoArray.h  MockTicks.h  MotorValve.h  OneWire.h  OneWireAddress.h  (+28 more)
lib/src/: ADS124S08.cpp  ActuatorAnalogConstrained.cpp  ActuatorDS2413.cpp  ActuatorDigital.cpp  ActuatorDigitalChangeLogged.cpp  ActuatorDigitalConstrained.cpp  ActuatorPwm.cpp  Balancer.cpp  ChemSense.cpp  DS18B20.cpp  DS2408.cpp  DS2413.cpp  DS2482.cpp  DS248x.cpp  DallasTemperature.cpp  FilterChain.cpp  FixedPoint.cpp  IirFilter.cpp  MotorValve.cpp  OneWire.cpp  OneWireAddress.cpp  OneWireCrc.cpp  OneWireDevice.cpp  OneWireMockDevice.cpp  (+12 more)
tools/: arm-pretty.gdbinit  gcc-pretty.gdbinit  hardware-debugging.md  pretty.gdbinit  system.gdbinit
(+361 files in other folders)
